--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
                 </h4>
             </form>
         </div>
+        <div class="punto_dos">
+            <h2 class="punto">
+                Punto Dos
+            </h2>
+            <form class="Rta_1">
+                <input class="Caja" type="text" name="e_animal" id="E_Animal" placeholder="Edad del Animal">
+                <input class="Boton" type="submit" value="Guardar" onclick="CalcPEdad(event)">
+                <input class="Boton" type="submit" value="Calcular porcentajes" onclick="Porcentages(event)">
+                <input class="Boton" type="submit" value="Limpiar lista" onclick="reincio2(e)">
+                <h4 id="rst">
+                </h4>
+            </form>
+        </div>
     </div>
 </body>
 </html>
