--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
                 </h4>
             </form>
         </div>
+        <div class="punto_Tres">
+            <h2 class="punto">
+                Punto Tres
+            </h2>
+            <form class="Rta_1">
+                <input class="Caja" type="text" name="Horas" id="H_traba" placeholder="Horas trabajadas">
+                <input class="Boton" type="submit" value="Calcular Salario" onclick="salario(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reincio3(event)">
+                <h4 id="rsp">
+                </h4>
+            </form>
+        </div>
     </div>
 </body>
 </html>
