--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <form class="Rta_2">
                 <input class="Caja" type="text" name="e_animal" id="E_Animal" placeholder="Edad del Animal">
                 <input class="Boton" type="submit" value="Guardar" onclick="CalcPEdad(event)">
-                <input class="Boton" type="submit" value="Calcular porcentajes" onclick="Porcentages(event)">
+                <input class="Boton" type="submit" value="Calcular porcentajes" onclick="Porcentajes(event)">
                 <input class="Boton" type="submit" value="Limpiar lista" onclick="reincio2(e)">
                 <h4 id="rspt2">
                 </h4>
@@ -40,7 +40,7 @@
                 Punto Tres
             </h2>
             <form class="Rta_3">
-                <input class="Caja" type="text" name="Horas" id="H_traba" placeholder="Horas trabajadas">
+                <input class="Caja" type="text" name="H_traba" id="H_traba" placeholder="Horas trabajadas">
                 <input class="Boton" type="submit" value="Calcular Salario" onclick="salario(event)">
                 <input class="Boton" type="submit" value="Limpiar" onclick="reincio3(event)">
                 <h4 id="rspt3">
@@ -52,7 +52,7 @@
                 Punto Cuatro
             </h2>
             <form class="Rta_4">
-                <input class="Caja" type="text" name="Horas" id="Edad" placeholder="Digite edad"><br>
+                <input class="Caja" type="text" name="Edad" id="Edad" placeholder="Digite edad"><br>
                 <select id="Gender" class="Seleccion">
                     <option value="">     </option>
                     <option value="Male">Hombre</option>
@@ -62,6 +62,19 @@
                 <input class="Boton" type="submit" value="Promedio Edades" onclick="Promedio(event)">
                 <input class="Boton" type="submit" value="Limpiar" onclick="reincio4(event)">
                 <h4 id="rspt4">
+                </h4>
+            </form>
+        </div>
+        <div class="punto_Cinco">
+            <h2 class="punto">
+                Punto Cinco
+            </h2>
+            <form class="Rta_5">
+                <input class="Caja" type="text" name="Num" id="Numero" placeholder="Digite Los numeros">
+                <input class="Boton" type="submit" value="Guardar" onclick="guardar(event)">
+                <input class="Boton" type="submit" value="Numero Menor" onclick="num_min(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reincio5(event)">
+                <h4 id="rspt5">
                 </h4>
             </form>
         </div>
