--- a/index.html
+++ b/index.html
@@ -94,6 +94,139 @@
                 </h4>
             </form>
         </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Siete
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="PresPro" id="PresPro" placeholder="Precio del producto"> 
+                <input class="Caja" type="text" name="Num_i" id="Num_i" placeholder="Cantidad de items"><br>
+                <input class="Boton" type="submit" value="Guardar Precio" onclick="guardar_precio(event)">
+                <input class="Boton" type="submit" value="Sumar Productos" onclick="suma_cost(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio7(event)">
+                <h4 class="r" id="rspt7">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Ocho
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Precio del producto"> 
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Cantidad de items">
+                <input class="Boton" type="submit" value="Guardar Precio" onclick="">
+                <input class="Boton" type="submit" value="Sumar Productos" onclick="">
+                <input class="Boton" type="submit" value="Limpiar" onclick="">
+                <h4 class="r" id="rspt8">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Nueve
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Diez
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Once
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Doce
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Trece
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Catorce
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
+        <div class="puntos">
+            <h2 class="punto">
+                Punto Quince
+            </h2>
+            <form class="Rta">
+                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
+                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
+                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
+                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
+                <h4 class="r" id="rspt6">
+                </h4>
+            </form>
+        </div>
     </div>
 </body>
 </html>
