--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
                 Punto Ocho
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Precio del producto"> 
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Cantidad de items">
-                <input class="Boton" type="submit" value="Guardar Precio" onclick="">
-                <input class="Boton" type="submit" value="Sumar Productos" onclick="">
-                <input class="Boton" type="submit" value="Limpiar" onclick="">
+                <input class="Caja" type="text" name="Ed" id="Ed" placeholder="Edades"> 
+                <input class="Boton" type="submit" value="Guardar" onclick="CalcuPers(event)">
+                <input class="Boton" type="submit" value="Calcular Perdida" onclick="CalPer(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio8(event)">
                 <h4 class="r" id="rspt8">
                 </h4>
             </form>
