--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 Punto Ocho
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Ed" id="Ed" placeholder="Edades"> 
+                <input class="Caja" type="text" name="Ed" id="Ed" placeholder="Edad"> 
                 <input class="Boton" type="submit" value="Guardar" onclick="CalcuPers(event)">
                 <input class="Boton" type="submit" value="Calcular Perdida" onclick="CalPer(event)">
                 <input class="Boton" type="submit" value="Limpiar" onclick="reinicio8(event)">
@@ -126,13 +126,10 @@
                 Punto Nueve
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
-                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
-                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
-                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
-                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
-                <h4 class="r" id="rspt6">
+                <input class="Caja" type="text" name="VV" id="VV" placeholder="Valor vendido en millones"> 
+                <input class="Boton" type="submit" value="Calcular comision" onclick="Calcu_Com(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio9(event)">
+                <h4 class="r" id="rspt9">
                 </h4>
             </form>
         </div>
