--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller de JavaS</title>
+    <title>Taller de BP</title>
     <link rel="stylesheet" href="css/estilos.css">
     <Script type="text/javascript" src="js/datos.js"></Script>
 </head>
@@ -138,7 +138,7 @@
                 Punto Diez
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Voto" id="Voto" placeholder="Voto"><br>
+                <input class="Caja" type="text" name="Voto" id="Voto" placeholder="Voto">
                 <select id="Candidat" class="Seleccion">
                     <option value="">     </option>
                     <option value="1">candidato1</option>
@@ -159,8 +159,8 @@
             <form class="Rta">
                 <input class="Caja" type="text" name="NumI" id="NumI" placeholder="Numero Inicial"> 
                 <input class="Caja" type="text" name="NumF" id="NumF" placeholder="Numero Final">
-                <input class="Boton" type="submit" value="Determinar" onclick="">
-                <input class="Boton" type="submit" value="Limpiar" onclick="">
+                <input class="Boton" type="submit" value="Determinar" onclick="Resultados_op(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio11(event)">
                 <h4 class="r" id="rspt11">
                 </h4>
             </form>
