--- a/index.html
+++ b/index.html
@@ -170,13 +170,10 @@
                 Punto Doce
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
-                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
-                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
-                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
-                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
-                <h4 class="r" id="rspt6">
+                <input class="Caja" type="text" name="NumPE" id="NumPE" placeholder="Ingrese Numero"> 
+                <input class="Boton" type="submit" value="Determinar" onclick="PropNum(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio12(event)">
+                <h4 class="r" id="rspt12">
                 </h4>
             </form>
         </div>
