--- a/index.html
+++ b/index.html
@@ -182,13 +182,10 @@
                 Punto Trece
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
-                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
-                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
-                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
-                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
-                <h4 class="r" id="rspt6">
+                <input class="Caja" type="text" name="Lsf" id="Lsf" placeholder="Longitud de la secuencias"> 
+                <input class="Boton" type="submit" value="Determinar" onclick="tipoNF(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio13(event)">
+                <h4 class="r" id="rspt13">
                 </h4>
             </form>
         </div>
