--- a/index.html
+++ b/index.html
@@ -194,13 +194,11 @@
                 Punto Catorce
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
-                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
-                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
-                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
-                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
-                <h4 class="r" id="rspt6">
+                <input class="Caja" type="text" name="Pnum" id="Pnum" placeholder="Primer Numero"> 
+                <input class="Caja" type="text" name="Snum" id="Snum" placeholder="Segundo Numer">
+                <input class="Boton" type="submit" value="Comparar" onclick="mcd(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio14(event)">
+                <h4 class="r" id="rspt14">
                 </h4>
             </form>
         </div>
