--- a/index.html
+++ b/index.html
@@ -207,13 +207,10 @@
                 Punto Quince
             </h2>
             <form class="Rta">
-                <input class="Caja" type="text" name="Pes" id="OrgPes" placeholder="Peso Original"> 
-                <input class="Boton" type="submit" value="Guardar" onclick="g_po(event)"><br>
-                <input class="Caja" type="text" name="Pes_Bas" id="Peso_V" placeholder="Pesos de bascula">
-                <input class="Boton" type="submit" value="Guardar" onclick="gpp(event)">
-                <input class="Boton" type="submit" value="Comparar" onclick="compp(event)">
-                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio6(event)">
-                <h4 class="r" id="rspt6">
+                <h2 class="txt">1994 A = 25 millones,crece 2% B = 19.9 millones,crece 3%</h2>
+                <input class="Boton" type="submit" value="Fecha A supera B" onclick="crecimiento(event)">
+                <input class="Boton" type="submit" value="Limpiar" onclick="reinicio15(event)">
+                <h4 class="r" id="rspt15">
                 </h4>
             </form>
         </div>
