--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body">
     <div class="container">
-        <h1 class=" Titulo">Taller De Buenas Practicas</h1>
+        <h1 class=" Titulo">Taller De Web 1</h1>
         <div class="puntos">
             <h2 class="punto">
                 Primer punto
